# rust-web-starter

./: README.md  docker-compose.yml  start.sh
api_server/: .gitignore  Cargo.toml  Dockerfile
api_server/src/: main.rs
